--- a/Core.DALC/Core.Negocio/Core.Negocio.csproj
+++ b/Core.DALC/Core.Negocio/Core.Negocio.csproj
@@ -79,6 +79,7 @@
     <Compile Include="SucursalCollections.cs" />
     <Compile Include="Usuario.cs" />
     <Compile Include="UsuarioColection.cs" />
+    <Compile Include="Valoracion.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core.DALC\Core.DALC.csproj">
