--- a/Core.DALC/Core.Negocio/Core.Negocio.csproj
+++ b/Core.DALC/Core.Negocio/Core.Negocio.csproj
@@ -68,6 +68,7 @@
     <Compile Include="PerfilCollections.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="ProductoCollections.cs" />
+    <Compile Include="ProductoHasOferta.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Region.cs" />
     <Compile Include="RegionCollections.cs" />
